#6443 Checkboxes: carry-forward questions are not collapsed Fixes #6443

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -870,6 +870,7 @@ svc-question,
       &>.svc-panel__placeholder_frame-wrapper,
       &>.svc-question__content-actions,
       &>.svc-panel__add-new-question-container,
+      &>.svc-carry-forward-panel-wrapper,
       &>.sd-file,
       &>sv-ng-file-question {
         display: none;
